correction violation standard sonar
git-svn-id: http://melusineicprod01.ceti.etat-ge.ch:21080/cti.composant/ct_jourferie_ge/trunk@13142 222efd1c-12ae-ee84-b859-f398d68c9be8